--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,7 @@ jobs:
         id: arch_check
         run: |
           (test -f ${{ matrix.architecture }}.Dockerfile && echo ::set-output name=check::passed) || echo ::set-output name=check::failed
+
       - name: Set up QEMU
         if: "contains(steps.arch_check.outputs.check, 'passed')"
         uses: docker/setup-qemu-action@v1
@@ -78,8 +79,6 @@ jobs:
           echo ::set-output name=vendor::${{ github.repository_owner }}
           echo ::set-output name=url::${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/blob/master/README.md
           echo ::set-output name=platform::${ARCHITECTURE//-/\/}
-          echo ::set-output name=cache::${GITHUB_REPOSITORY//docker-}:${GITHUB_REF//refs\/heads\//}-cache-${{ matrix.architecture }}
-          echo ::set-output name=tag::${GITHUB_REPOSITORY//docker-}:${GITHUB_REF//refs\/heads\//}-${GITHUB_SHA:0:7}-${GITHUB_RUN_NUMBER}-${{ matrix.architecture }}
           VERSION=$(cut -d'.' -f2,3,4,5 .VERSION)
           if [[ ${VERSION} == null ]] || [[ -z ${VERSION} ]]; then
             VERSION=$(date +"%Y%m%d%H%M%S")
@@ -91,7 +90,8 @@ jobs:
           else
             echo ::set-output name=branch::${BRANCH}
           fi
-          echo ::set-output name=package_version::${GITHUB_REF//refs\/heads\//}-${GITHUB_SHA:0:7}-${GITHUB_RUN_NUMBER}
+          echo ::set-output name=tag::${GITHUB_REPOSITORY//docker-}:${GITHUB_REF//refs\/heads\//}-${VERSION}-${GITHUB_RUN_NUMBER}-${{ matrix.architecture }}
+          echo ::set-output name=package_version::${GITHUB_REF//refs\/heads\//}-${VERSION}-${GITHUB_RUN_NUMBER}
 
       - name: Build and push
         if: "contains(steps.arch_check.outputs.check, 'passed')"
@@ -100,8 +100,6 @@ jobs:
           push: true
           platforms: ${{ steps.prep.outputs.platform }}
           file: ./${{ matrix.architecture }}.Dockerfile
-          cache-from: ghcr.io/${{ steps.prep.outputs.cache }}
-          cache-to: ghcr.io/${{ steps.prep.outputs.cache }}
           tags: |
             ${{ steps.prep.outputs.tag }}
             ghcr.io/${{ steps.prep.outputs.tag }}
@@ -118,6 +116,7 @@ jobs:
             PACKAGE_VERSION=${{ steps.prep.outputs.package_version }}
             VERSION=${{ steps.prep.outputs.version }}
             BRANCH=${{ steps.prep.outputs.branch }}
+
       - name: Dive Analysis
         if: "contains(steps.arch_check.outputs.check, 'passed')"
         uses: yuichielectric/dive-action@0.0.4
@@ -161,23 +160,16 @@ jobs:
         run: |
           IMAGE=${{ matrix.registry }}/${GITHUB_REPOSITORY//docker-/}
           TAG=${GITHUB_REF//refs\/heads\//}
-          SOURCE=${IMAGE}:${TAG}-${GITHUB_SHA:0:7}-${GITHUB_RUN_NUMBER}
           VERSION=${{ needs.build.outputs.version }}
-          BRANCH=${{ needs.build.outputs.branch }}
+          SOURCE=${IMAGE}:${TAG}-${VERSION//\~/-}-${GITHUB_RUN_NUMBER}
           [[ -f linux-amd64.Dockerfile ]]  && AMD64=${SOURCE}-linux-amd64
           [[ -f linux-arm64.Dockerfile ]]  && ARM64=${SOURCE}-linux-arm64
           [[ -f linux-arm-v7.Dockerfile ]] && ARMV7=${SOURCE}-linux-arm-v7
           docker manifest create ${IMAGE}:${TAG} ${AMD64} ${ARM64} ${ARMV7}
           docker manifest push ${IMAGE}:${TAG}
-          docker manifest create ${IMAGE}:${TAG}-${GITHUB_SHA:0:7} ${AMD64} ${ARM64} ${ARMV7}
-          docker manifest push ${IMAGE}:${TAG}-${GITHUB_SHA:0:7}
-          docker manifest create ${IMAGE}:${TAG}-${BRANCH}-${VERSION//\~/-} ${AMD64} ${ARM64} ${ARMV7}
-          docker manifest push ${IMAGE}:${TAG}-${BRANCH}-${VERSION//\~/-}
-          if [[ ${BRANCH} != null ]]; then
-            docker manifest create ${IMAGE}:${TAG}-${BRANCH} ${AMD64} ${ARM64} ${ARMV7}
-            docker manifest push ${IMAGE}:${TAG}-${BRANCH}
-          fi
-          if [[ ${GITHUB_REF//refs\/heads\//} == release ]]; then
+          docker manifest create ${IMAGE}:${TAG}-${VERSION//\~/-}-${GITHUB_RUN_NUMBER} ${AMD64} ${ARM64} ${ARMV7}
+          docker manifest push ${IMAGE}:${TAG}-${VERSION//\~/-}-${GITHUB_RUN_NUMBER}
+          if [[ ${GITHUB_REF//refs\/heads\//} == nightly ]]; then
             docker manifest create ${IMAGE}:latest ${AMD64} ${ARM64} ${ARMV7}
             docker manifest push ${IMAGE}:latest
           fi
